--- a/src/main/resources/templates/mail/task-count-scheduler-mail.html
+++ b/src/main/resources/templates/mail/task-count-scheduler-mail.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Trello Card</title>
+    <title>Task count</title>
     <style>
 
         @media only screen and (max-width: 620px) {
@@ -100,6 +100,10 @@
                                         <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"> Dear <span th:text="${admin_config.getAdminName()}"></span>,</p>
 
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;" th:text="${message}"></p>
+
+                                        <p th:if="${queue_overloaded}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><span th:text="${admin_config.getAdminName()}"></span>, Your task queue is overloaded. You should get to work!.</p>
+                                        <p th:unless="${queue_overloaded}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><span th:text="${admin_config.getAdminName()}"></span>, Your task queue load is fine. Good work!.</p>
+
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
                                             <tr>
@@ -115,14 +119,13 @@
                                             </tr>
                                             </tbody>
                                         </table>
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
-                                            Application functionality:
-                                        </p>
-                                        <ul th:each="function : ${application_functionality}">
-                                            <li th:text="${function}"></li>
-                                        </ul>
 
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Thank you for your contribution. See you soon <span th:text="${admin_config.getAdminName()}"></span>.</p>
+                                        <p th:if="${queue_overloaded}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            Here are some efficiency tips to help you manage Your work:
+                                        </p>
+                                        <ul th:each="tip : ${efficiency_tips}">
+                                            <li th:text="${tip}"></li>
+                                        </ul>
                                     </td>
                                 </tr>
                             </table>
